Fix Service view to me more readable and added search in Cars and Customer view

--- a/car_service/static/css/service/service.css
+++ b/car_service/static/css/service/service.css
@@ -137,8 +137,11 @@ button:hover {
 }
 
 .service__btn__add {
-    text-align: left;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 20px;
 }
 
 .service_add:hover {
